2006-04-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_type.c (rbgobj_lookup_class): fixed typo.

2006-04-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_closure.c (rclosure_marshal, rclosure_marshal_body):
	Changed an argument type to VALUE from struct marshal_arg *.

2006-03-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_closure.c: Fixed memory leak. Held closure in each
	object instead of using global table to protect GRClosure from
	Ruby's GC. Each function using GRClosure needs to call
	g_rclosure_attach to protect GRClosure from Ruby's GC.

	* src/glib2.def: Added g_rclosure_attach.
	* src/rbgobject.h: ditto.

	* src/rbgobj_object.c: Called g_rclosure_attach.
	* src/rbgobj_signal.c: ditto.

2006-03-11  Joao Pedrosa 

	* src/rbglib_win32.c: Fix a typo on win32.

2006-02-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_win32.c: Supported GLib.win32_locale and
	GLib.win32_locale_filename_from_utf8.

	* src/rbglib_i18n.c: Supported GLib.language_names.

2006-01-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_source.c: GLib::Source#remove -> GLib::Soruce.remove.

2005-12-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobj_signal.c: Fixed to use G_BLOCK_PROC.
	
2005-11-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_timer.c: Fix to compile on Cygwin.

2005-11-14  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib.h: Increment micro version.
	* src/rbgobject.h, glib2.def: Fixed problems on Win32.

2005-11-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgobject.[ch]: Added G_CHILD_REMOVE_ALL.

2005-11-03  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbglib_mainloop.c: rb_thread_wait_for waits 10ms instead of 100ms
	to avoid to lose any signals for Win32. Report by MIYAMUKO Katsuyuki.
	* src/rbgobject.[ch]: Added G_CHILD_SET, _UNSET, _ADD, _REMOVE.
	* src/rbgobj_object.c: Keeps ruby objects as instance variables
	of the object not to be GCed(GLib::Object#(set|get)_property).
	* src/rbgobject.c: Fixed memory leaks. Bug #1341573. Retrieve